Update to dplyr latest version and NSE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,28 +51,25 @@ export(standardize_data)
 export(variable_importance_plot)
 importFrom(clusterSim,index.G1)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
-importFrom(dplyr,arrange_)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
-importFrom(dplyr,filter_)
 importFrom(dplyr,first)
 importFrom(dplyr,full_join)
 importFrom(dplyr,funs_)
-importFrom(dplyr,group_by_)
+importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
-importFrom(dplyr,select_)
 importFrom(dplyr,semi_join)
 importFrom(dplyr,summarise)
-importFrom(dplyr,summarise_each_)
-importFrom(dplyr,tbl_df)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
@@ -108,7 +105,8 @@ importFrom(ncdf4,ncvar_get)
 importFrom(randomForest,importance)
 importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
+importFrom(rlang,exprs)
 importFrom(sp,coordinates)
 importFrom(sp,gridded)
 importFrom(stringi,stri_extract_last_regex)
-importFrom(tidyr,spread_)
+importFrom(tidyr,pivot_wider)
